v5.13.01 - New version naming convention + adding comments