@@ -10,4 +10,10 @@ module ee552.finalproject.mainapp {
 
     //opens ee552.finalproject.mainapp to javafx.fxml;
     exports ee552.finalproject.mainapp;
+
+    // Extra Configurations to save for later ... if needed
+    //--add-opens javafx.swing/javafx.embed.swing=jxbrowser
+    //--add-opens javafx.graphics/com.sun.javafx.stage=jxbrowser
+    // --add-exports javafx.graphics/com.sun.javafx.stage=jxbrowser
+    // --add-exports javafx.controls/com.sun.javafx.scene.control=jxbrowser"
 }
